[package]
name = "vhfuzz"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-iterator = "2.2.0"
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
indicatif = "0.17.7"
lazy_static = "1.4.0"
reqwest = { version = "0.11.24", features = ["socks", "native-tls-alpn"] }
serde = { version = "1.0.196", features = ["derive", "serde_derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
