[package]
name = "vhost-enumerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.30"
indicatif = "0.17.8"
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.10.6"
reqwest = "0.12.5"
tokio = { version = "1.37.0", features = ["full"] }
